# msgraph-wasm-fdw

./: Cargo.toml
.github/workflows/: release_wasm_fdw.yml
src/: lib.rs  lib.rs.bak
wit/: world.wit
